WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192912
Unwanted page navigation after showing & dismissing contextual menu with control-click
https://bugs.webkit.org/show_bug.cgi?id=192912
Summary
Unwanted page navigation after showing & dismissing contextual menu with cont...
Blaze Burg
Reported
2018-12-19 20:08:41 PST
This regressed with mouse event queue work.
Attachments
Patch
(3.40 KB, patch)
2018-12-20 11:46 PST
,
Blaze Burg
timothy
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2018-12-19 20:09:36 PST
<
rdar://problem/46318508
>
Blaze Burg
Comment 2
2018-12-20 11:46:29 PST
Created
attachment 357844
[details]
Patch
Blaze Burg
Comment 3
2019-01-07 11:25:06 PST
Committed
r239686
: <
https://trac.webkit.org/changeset/239686
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug